adding HTML structure to index1.html and adding changes to README

--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,15 @@
         <title>Git Walkthrough</title>
     </head>
     <body>
-
+        <header>
+            <h1>Git Walkthrough</h1>
+        </header>
+        <main>
+            <p>This is a guide on adding and manipulating branches in git</p>
+        </main>
+        <footer>
+            
+        </footer>
+        
     </body>
 </html>
